Redux/Typescriptにリファクタ
